...
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="50dp"
        android:background="@drawable/paramedic_logo"/>

    <Button
        android:id="@+id/neues_blatt_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:layout_toLeftOf="@id/logo"
        android:text="Neues Fahrtenblatt"/>

    <Button
        android:id="@+id/bearbeiten_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:layout_toLeftOf="@id/neues_blatt_button"
        android:text="Bearbeiten"
...
