<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/zieleingabe_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pardertec.de.medipad.zieleingabe_activity"
    android:weightSum="2">

    <fragment
        android:id="@+id/zieleingabe_manuell_fragment"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:name="de.pardertec.medipad.fahrtenbuch.input.ZieleingabeManuellSection"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_weight="1"
        tools:layout="@layout/zieleingabe_manuell_section" />
    <fragment
        android:id="@+id/zieleingabe_favoriten_fragment"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:name="de.pardertec.medipad.fahrtenbuch.input.ZieleingabeFavoritenSection"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        tools:layout="@layout/zieleingabe_favoriten_section" />

</LinearLayout>
