<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.pardertec.medipad.fahrtenbuch.FahrtenbuchActivity"
    android:id="@+id/fahrtenbuch_layout">

    <fragment
        android:id="@+id/top_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="de.pardertec.medipad.fahrtenbuch.FahrtenbuchTopSection"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/fahrtenbuch_top_section" />

    <fragment
        android:id="@+id/middle_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="de.pardertec.medipad.fahrtenbuch.FahrtenbuchMiddleSection"
        android:layout_below="@+id/top_fragment"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/fahrtenbuch_middle_section" />

    <fragment
        android:id="@+id/bottom_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="de.pardertec.medipad.fahrtenbuch.FahrtenbuchBottomSection"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/fahrtenbuch_bottom_section" />




</RelativeLayout>
